--- a/templates/house_header.html
+++ b/templates/house_header.html
@@ -1,43 +1,43 @@
 <header>
-    <nav class="nav nav-pills my-2 align-items-center" style="max-height: 120px; flex-wrap: nowrap">
+    <nav class="nav nav-pills my-2 py-2 align-items-center" style="flex-wrap: wrap">
         <h5 class="my-1">Rooms: </h5>
-        <div style="flex-shrink: 5; min-width: 200px">
-            <div style="overflow-x: auto; display: flex; gap: 8px">
-                {% for houseRoom in house.room_set.all %}
-                    <a style="text-wrap: nowrap" href="{% url 'house-room' pk=house.id rpk=houseRoom.id %}"
-                       class="nav-link rounded-pill{% if houseRoom.id == room.id %} active{% endif %}">{{ houseRoom.name }}
-                    </a>
-                {% endfor %}
-            </div>
+        <div style="display: flex; gap: 8px" class="flex-wrap">
+            {% for houseRoom in house.room_set.all %}
+                <a style="text-wrap: nowrap" href="{% url 'house-room' pk=house.id rpk=houseRoom.id %}"
+                   class="nav-link rounded-pill{% if houseRoom.id == room.id %} active{% endif %}">{{ houseRoom.name }}
+                </a>
+            {% endfor %}
         </div>
         <div style="width: 2px; align-self: stretch;  background: lightsteelblue; margin: 4px 0; border-radius: 1000vh"></div>
-        <button type="button" class="btn btn-outline-primary rounded-circle" data-bs-toggle="modal"
-                style="aspect-ratio: 1"
-                data-bs-target="#room_modal">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg"
-                 viewBox="0 0 16 16">
-                <path fill-rule="evenodd"
-                      d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"></path>
-            </svg>
-        </button>
-        <button type="button" class="btn btn-outline-primary rounded-circle" data-bs-toggle="modal"
-                style="aspect-ratio: 1"
-                data-bs-target="#edit_room_modal">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-                 class="bi bi-pencil-square" viewBox="0 0 16 16">
-                <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"></path>
-                <path fill-rule="evenodd"
-                      d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"></path>
-            </svg>
-        </button>
-        <a class="btn btn-outline-danger rounded-circle" style="aspect-ratio: 1"
-           href="{% url 'delete-room' pk=room.id %}">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash"
-                 viewBox="0 0 16 16">
-                <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"></path>
-                <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"></path>
-            </svg>
-        </a>
+        <div class="d-flex" style="gap: 8px">
+            <button type="button" class="btn btn-outline-primary rounded-circle" data-bs-toggle="modal"
+                    style="aspect-ratio: 1"
+                    data-bs-target="#room_modal">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg"
+                     viewBox="0 0 16 16">
+                    <path fill-rule="evenodd"
+                          d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2"></path>
+                </svg>
+            </button>
+            <button type="button" class="btn btn-outline-primary rounded-circle" data-bs-toggle="modal"
+                    style="aspect-ratio: 1"
+                    data-bs-target="#edit_room_modal">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                     class="bi bi-pencil-square" viewBox="0 0 16 16">
+                    <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"></path>
+                    <path fill-rule="evenodd"
+                          d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"></path>
+                </svg>
+            </button>
+            <a class="btn btn-outline-danger rounded-circle" style="aspect-ratio: 1"
+               href="{% url 'delete-room' pk=room.id %}">
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash"
+                     viewBox="0 0 16 16">
+                    <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"></path>
+                    <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4zM2.5 3h11V2h-11z"></path>
+                </svg>
+            </a>
+        </div>
     </nav>
 </header>
 
