--- a/templates/smart_lock.html
+++ b/templates/smart_lock.html
@@ -4,12 +4,12 @@
         <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2m3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2"></path>
     </svg>
     <p class="m-0 p-0">{{ device.name }}<br>
-        <small>{{ device.data.all.0.timestamp|timesince }}</small>
+        <small>{{ device.latest_data.timestamp|timesince }}</small>
     </p>
 </div>
 <div class="d-flex align-items-center flex-column">
-    <a style="display: inline-flex; align-items: center; justify-content: center; padding: 16px; border-radius: 1000vh; border: 2px solid #0d6efd; {% if device.data.all.0.data.status == "locked" %} background: #0d6efd {% endif %}">
-        {% if device.data.all.0.data.status == "locked" %}
+    <a style="display: inline-flex; align-items: center; justify-content: center; padding: 16px; border-radius: 1000vh; border: 2px solid #0d6efd; {% if device.latest_data.data.status == "locked" %} background: #0d6efd {% endif %}">
+        {% if device.latest_data.data.status == "locked" %}
             <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64"
                  fill="white" class="bi bi-lock" viewBox="0 0 16 16">
                 <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2m3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2M5 8h6a1 1 0 0 1 1 1v5a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1V9a1 1 0 0 1 1-1"></path>
@@ -21,5 +21,5 @@
             </svg>
         {% endif %}
     </a>
-    <small>{{ device.data.all.0.timestamp|timesince }}</small>
+    <small>{{ device.latest_data.timestamp|timesince }}</small>
 </div>
