--- a/templates/house.html
+++ b/templates/house.html
@@ -1,7 +1,7 @@
 {% extends 'main.html' %}
-
+{% load static %}
 {% block content %}
-    <script src="https://cdn.jsdelivr.net/npm/luxon@1.8.2/build/global/luxon.min.js"></script>
+    <script src="{% static 'scripts/luxon.min.js' %}"></script>
 
     <div class="d-flex align-items-center gap flex-wrap">
         <div>
