--- a/templates/main.html
+++ b/templates/main.html
@@ -7,12 +7,11 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock title %}</title>
-    {% load bootstrap5 %}
-    {% bootstrap_css %}
-    {% bootstrap_javascript %}
+    <link rel="stylesheet" type="text/css" href="{% static 'styles/bootstrap.min.css' %}">
+    <script src="{% static 'scripts/bootstrap.bundle.min.js' %}"></script>
     {% block head %}{% endblock head %}
     <link rel="stylesheet" type="text/css" href="{% static 'styles/style.css' %}">
-    <script src="https://unpkg.com/htmx.org@2.0.2" integrity="sha384-Y7hw+L/jvKeWIRRkqWYfPcvVxHzVzn5REgzbawhxAuQGwX1XWe70vji+VSeHOThJ" crossorigin="anonymous"></script>
+    <script src="{% static 'scripts/htmx.min.js' %}"></script>
 </head>
 <body>
 {% include 'sidebar.html' %}
